--- a/client/index.css
+++ b/client/index.css
@@ -7,4 +7,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: rgb(127, 219, 255);
+    text-align: center;
 }
+
