--- a/client/index.css
+++ b/client/index.css
@@ -1,13 +1,28 @@
 #myMapID {
-    height: 100%;
-    width: 100%;
+    height: 80vh;
+    width: 100%;    
 }
 
-html, body {
-    height: 100%;
+html {
+    box-sizing: border-box;
+    font-size: 100%;
+    background-color: rgb(127, 219, 255); 
+}
+
+*,*::before, *::after{
+    box-sizing: inherit;
+}
+
+body {
     margin: 0;
     padding: 0;
-    background-color: rgb(127, 219, 255);
+
+}
+
+h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+}
