--- a/client/index.css
+++ b/client/index.css
@@ -16,8 +16,9 @@ html {
 body {
     margin: 0;
     padding: 0;
-
+    color: rgb(0, 0, 0);
 }
+
 
 h1 {
     text-align: center;
@@ -26,3 +27,4 @@ h1 {
 h2 {
     text-align: center;
 }
+
